kustomize/syncthing/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: syncthing
  labels:
    app.kubernetes.io/name: syncthing
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: syncthing
  template:
    metadata:
      labels:
        app.kubernetes.io/name: syncthing
    spec:
      hostname: syncthing
      serviceAccount: syncthing
      serviceAccountName: syncthing
      containers:
        - name: syncthing
          image: "syncthing/syncthing:1.23.4"
          ports:
            - containerPort: 8384
              name: http
          volumeMounts:
            - mountPath: /var/syncthing
              name: data
        - name: tailscale
          image: "ghcr.io/tailscale/tailscale:v1.40.0"
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: syncthing-data
