kustomize/syncthing/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: syncthing
spec:
  selector:
    app.kubernetes.io/name: syncthing
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
