kustomize/syncthing/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: syncthing
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
    - host: "sync.chijun.website"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: syncthing
                port:
                  number: 80
  tls:
    - hosts:
        - "*.chijun.website"
      secretName: wildcard-chijun-website
